--- a/web/app/views/feeds/_float_menu.html.erb
+++ b/web/app/views/feeds/_float_menu.html.erb
@@ -48,20 +48,14 @@
         Gostos parecidos
       </div>
     </div>
-    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="cinema">
+    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="explorer">
       <div class="me-float-menu__icon">
-        <i class="material-icons">movie</i>
+        <i class="material-icons">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M12 10.9c-.61 0-1.1.49-1.1 1.1s.49 1.1 1.1 1.1c.61 0 1.1-.49 1.1-1.1s-.49-1.1-1.1-1.1zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm2.19 12.19L6 18l3.81-8.19L18 6l-3.81 8.19z"/></svg>
+        </i>
       </div>
       <div class="me-float-menu__label">
-        Nos cinemas
-      </div>
-    </div>
-    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="street">
-      <div class="me-float-menu__icon">
-        <i class="material-icons">nature_people</i>
-      </div>
-      <div class="me-float-menu__label">
-        Na rua
+        Explorar tudo
       </div>
     </div>
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="history">
