--- a/web/app/views/layouts/_json_ld.html.erb
+++ b/web/app/views/layouts/_json_ld.html.erb
@@ -31,4 +31,4 @@
           "priceCurrency": "BRL",
           "url": "<%= event_path event %>"
         }
-    } <%= "," unless @collection[:events].size == event_counter + 1 %>
+    } <%= "," unless @collection[:events].length == event_counter + 1 %>
