--- a/web/app/views/layouts/classifier/_classifier.html.erb
+++ b/web/app/views/layouts/classifier/_classifier.html.erb
@@ -1,6 +1,6 @@
 
 <p>
-	<%= "#{@events.size} eventos para treinamento" %>
+	<%= "#{@events.length} eventos para treinamento" %>
 </p>
 <p>
 <a href="/train?desc=true">Classificação alta</a>
