--- a/web/app/views/feeds/today.html.erb
+++ b/web/app/views/feeds/today.html.erb
@@ -1,3 +1,5 @@
+<% content_for :canonical_url, today_events_url %>
+
 <%= notice %>
 
 <% content_for :meta_title, "Eventos em Porto Alegre Hoje (#{I18n.l(Date.today, format: :short)}) e Amanhã (#{I18n.l(Date.tomorrow, format: :short)})" %>
