--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -27,6 +27,7 @@
   <link rel="apple-touch-icon" href="<%= image_url 'icons/launcher-icon-180x180.png' %>">
 
   <%= render partial: 'layouts/meta-tags' %>
+  <%= canonical_url %>
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
