--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :canonical_url, organizer_url(@organizer) %>
+
 <%= notice %>
 
 <% content_for :meta_title, "Eventos por #{@organizer.details_name} em Porto Alegre | Alegreme.com" %>
