--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :canonical_url, place_url(@place) %>
+
 <%= notice %>
 
 <% content_for :meta_title, "Eventos em #{@place.details_name} Porto Alegre | Alegreme.com" %>
