--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :canonical_url, root_url %>
+
 <div class="template__container <%= 'is-pwa' if params[:pwa] %>">
   <section class="brand">
     <div class="brand__letter">
