Create amp page for events and today-and-tomorrow

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,7 +1,8 @@
-$brand-color: #03994C; // #2ECC71; // #5EEDDE; // #31916C; // #26B679
+$brand-color: #03994C;
+$brand-color-aa: darken(#03994C, 5%);
+$brand-color-aaa: darken(#03994C, 10%);
 $brand-color-right: #2191FB;
-$brand-color-high-contrast: #0C0F0A; //darken($brand-color, 10%);
-//$brand-color-intersect: #2bb3ae;
+$brand-color-high-contrast: #0C0F0A;
 
 $border-color: #E1E1E1;
 
