--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
   <%= render partial: 'layouts/meta-tags' %>
 
   <%= canonical_url %>
+  <%= amp_url %>
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
