--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :canonical_url, organizer_url(@organizer) %>
+<% content_for :canonical_url, organizer_url(@organizer, format: :html) %>
 
 <%= notice %>
 
