--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :canonical_url, place_url(@place) %>
+<% content_for :canonical_url, place_url(@place, format: :html) %>
 
 <%= notice %>
 
