--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :canonical_url, root_url %>
+<% content_for :canonical_url, root_url, format: :html %>
 
 <div class="template__container <%= 'is-pwa' if params[:pwa] %>">
   <section class="brand">
