--- a/web/app/views/layouts/_meta-tags.html.erb
+++ b/web/app/views/layouts/_meta-tags.html.erb
@@ -5,7 +5,7 @@
 <!-- Open Graph / Facebook -->
 <meta property="fb:app_id" content="2687173967974142"/>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.alegreme.com/">
+<meta property="og:url" content="<%= url_for(format: :html, only_path: false) %>">
 <meta property="og:title" content="<%= meta_title %>">
 <meta property="og:description" content="<%= meta_description %>">
 <meta property="og:image" content="<%= image_url meta_image %>">
@@ -13,7 +13,7 @@
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://www.alegreme.com/">
+<meta property="twitter:url" content="<%= url_for(format: :html, only_path: false) %>">
 <meta property="twitter:title" content="<%= meta_title %>">
 <meta property="twitter:description" content="<%= meta_description %>">
 <meta property="twitter:image" content="<%= meta_image %>">
